--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <link href="%PUBLIC_URL%/loading.min.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
+<body dir="rtl">
   <noscript>Enable JS</noscript>
   <div id="root">
     <div class="loading">
